--- a/vanillaJS__momentum--02/index.css
+++ b/vanillaJS__momentum--02/index.css
@@ -2,22 +2,22 @@
 
 /* reset */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 html {
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 *,
 *:before,
 *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -ms-flex: 0 1 auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -ms-flex: 0 1 auto;
 }
 body,
 button,
@@ -43,49 +43,49 @@ td,
 textarea,
 th,
 ul {
-    margin: 0;
-    padding: 0
+  margin: 0;
+  padding: 0;
 }
 button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    -webkit-appearance: button;
-    cursor: pointer
+  -webkit-appearance: button;
+  cursor: pointer;
 }
 input,
 textarea,
 select,
 button,
 a {
-    font-family: inherit;
-    font-size: 100%
+  font-family: inherit;
+  font-size: 100%;
 }
 input,
 textarea,
 button,
 select {
-    -webkit-appearance: none; 
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -o-border-radius: 0;
-    border-radius: 0;
-    font-size: 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  font-size: 16px;
 }
 button {
-    border: 0;
+  border: 0;
 }
 a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 a,
 a:hover,
 a:focus {
-    color: inherit;
-    text-decoration: none
+  color: inherit;
+  text-decoration: none;
 }
 h1,
 h2,
@@ -93,116 +93,141 @@ h3,
 h4,
 h5,
 h6 {
-    margin-bottom: 15px;
-    font-weight: normal;
+  margin-bottom: 15px;
+  font-weight: normal;
 }
 [tabindex="-1"]:focus {
-    outline: 0
+  outline: 0;
 }
 ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 img {
-    vertical-align: top;
+  vertical-align: top;
 }
 p {
-    margin: 0;
+  margin: 0;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-img, fieldset {
-    border: 0 none;
+img,
+fieldset {
+  border: 0 none;
+}
+
+/* Scrollbar Custom */
+/* 스크롤바의 width */
+body::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  overflow: hidden;
+  background: transparent;
+}
+/* 스크롤바의 전체 배경색 */
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+/* 스크롤바 색 */
+body::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: gray;
+}
+/* 위 아래 버튼 (버튼 없애기를 함) */
+body::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
 }
 
 /* body */
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%; height: 100vh;
-    color: #273f40;
-    font-family: 'Raleway', sans-serif;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  color: #273f40;
+  font-family: "Raleway", sans-serif;
+  overflow: hidden;
 }
 
 .js-clock > h1 {
-    font-size: 10vw;
-    font-weight: 200;
+  font-size: 10vw;
+  font-weight: 200;
 }
 
 input {
-    width: 220px;
-    height: 40px;
-    padding-left: 15px;
-    margin-bottom: 10px;
-    border: none;
-    border-radius: 10px;
-    color: #fff;
-    background-color: #273f40;
+  width: 220px;
+  height: 40px;
+  padding-left: 15px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #273f40;
 }
 
 .js-weather {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .form,
 .greetings {
-    display: none;
+  display: none;
 }
 
 .showing {
-    display: block;
-    font-size: 42px;
-    font-weight: 500;
+  display: block;
+  font-size: 42px;
+  font-weight: 500;
 }
 
 .js-toDoList {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 220px;
-    padding: 15px;
-    border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 220px;
+  padding: 15px;
+  border-radius: 10px;
 }
 
 .js-toDoList li {
-    display: flex;
-    align-items: center;
-    height: 40px;
+  display: flex;
+  align-items: center;
+  height: 40px;
 }
 
 .js-toDoList li button {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .js-toDoList li span {
-    margin-left: 10px;
-    font-weight: 500;
-    color: #273f40;
+  margin-left: 10px;
+  font-weight: 500;
+  color: #273f40;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .bgImage {
-    position: absolute;
-    z-index: -1;
-    width: 100%; height:auto;
-    animation: fadeIn .5s linear;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+  animation: fadeIn 0.5s linear;
 }
-
 
 /* >= 1200px */
 /* @media screen and (max-width: 1200px) {
